restore sort order for TransactionFormsService